eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/overlays/dev/namespace-mesh-pilot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-dev
  labels:
    cilium.io/mutual-auth-pilot: "true"
