eggenberg-talos-cluster-1/argocd-apps-configuration/pmhme/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-route
spec:
  hostnames:
    - dev.hauptmann.dev
